--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   http: ^1.2.1
   dotenv: ^4.2.0
   flutter_curl: ^0.3.0
+  get: ^4.6.6
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
