--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.2
   http: ^1.2.1
   flutter_dotenv: ^5.1.0
+  html_unescape: ^2.0.0
 
 dev_dependencies:
   flutter_test:
