Fixed special chars display

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_curl: ^0.3.0
   get: ^4.6.6
   provider: ^6.1.2
+  html_unescape: ^2.0.0
 
 dev_dependencies:
   flutter_test:
